force-app/main/default/objects/BOM__c/BOM__c.object-meta.xml
<CustomObject>
    <description>Bill Of Material</description>
    <label>BOM</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>