force-app/main/default/objects/BOM__c/fields/BundleId__c.field-meta.xml
<CustomField>
    <fullName>BundleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to bundle master product.</description>
    <inlineHelpText>Relation to bundle master product.</inlineHelpText>
    <label>Bundle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Items (list of material)</relationshipLabel>
    <relationshipName>BOMs</relationshipName>
    <type>Lookup</type>
</CustomField>