force-app/main/default/objects/BOM__c/fields/BundleItemId__c.field-meta.xml
<CustomField>
    <fullName>BundleItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to bundle item product.</description>
    <inlineHelpText>Relation to bundle item product.</inlineHelpText>
    <label>Bundle Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parent Bundles (where is this material used)</relationshipLabel>
    <relationshipName>BOMItems</relationshipName>
    <type>Lookup</type>
</CustomField>