force-app/main/default/objects/BOM__c/fields/BundleItemSAPId__c.field-meta.xml
<CustomField>
    <fullName>BundleItemSAPId__c</fullName>
    <description>Kód artiklu ze SAP - dílec (materiál)</description>
    <inlineHelpText>Kód artiklu ze SAP - dílec (materiál)</inlineHelpText>
    <label>Bundle Item SAP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>