force-app/main/default/objects/BOM__c/fields/BundleSAPId__c.field-meta.xml
<CustomField>
    <fullName>BundleSAPId__c</fullName>
    <description>Kód Artiklu v SAP (nadřazený výrobek)</description>
    <inlineHelpText>Kód Artiklu v SAP (nadřazený výrobek)</inlineHelpText>
    <label>Bundle SAP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>