force-app/main/default/objects/BOM__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Used for BOM filtering in the Quote Line Manager</description>
    <inlineHelpText>Used for BOM filtering in the Quote Line Manager</inlineHelpText>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductCategory</valueSetName>
    </valueSet>
</CustomField>