force-app/main/default/objects/BOM__c/fields/EId__c.field-meta.xml
<CustomField>
    <fullName>EId__c</fullName>
    <description>&lt;Bundle SAP ID&gt;-&lt;Bundle Item SAP ID&gt;&lt;Row Number&gt;</description>
    <formula>BundleId__r.SAPId__c + &quot;-&quot; + BundleItemId__r.SAPId__c + &quot;-&quot; + TEXT(RowNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&lt;Bundle SAP ID&gt;-&lt;Bundle Item SAP ID&gt;&lt;Row Number&gt;</inlineHelpText>
    <label>External ID</label>
    <type>Text</type>
</CustomField>