force-app/main/default/objects/BOM__c/fields/IsEditable__c.field-meta.xml
<CustomField>
    <fullName>IsEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part is editable by Salesman</description>
    <inlineHelpText>Part is editable by Salesman</inlineHelpText>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>