force-app/main/default/objects/BOM__c/fields/IsRecalculate__c.field-meta.xml
<CustomField>
    <fullName>IsRecalculate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for BOM trigger initiation - called from Product trigger</description>
    <inlineHelpText>Used for BOM trigger initiation - called from Product trigger</inlineHelpText>
    <label>Recalculate</label>
    <type>Checkbox</type>
</CustomField>