force-app/main/default/objects/BOM__c/fields/IsTemplateProduct__c.field-meta.xml
<CustomField>
    <fullName>IsTemplateProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as default line item which must be change to proper item</description>
    <inlineHelpText>Used as default line item which must be change to proper item</inlineHelpText>
    <label>Template Product</label>
    <type>Checkbox</type>
</CustomField>