force-app/main/default/objects/BOM__c/fields/IsVisible__c.field-meta.xml
<CustomField>
    <fullName>IsVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if it is visible in the Quote Manager</description>
    <inlineHelpText>Determines if it is visible in the Quote Manager</inlineHelpText>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>