force-app/main/default/objects/BOM__c/fields/IsVisibleOnPDF__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleOnPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visibel On PDF</label>
    <type>Checkbox</type>
</CustomField>