force-app/main/default/objects/BOM__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>Item Product Code.</description>
    <inlineHelpText>Item Product Code.</inlineHelpText>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>