force-app/main/default/objects/BOM__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity in Bundle.</description>
    <inlineHelpText>Quantity in Bundle.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>