force-app/main/default/objects/BOM__c/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <label>Quantity Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QuantityUnitOfMeasure</valueSetName>
    </valueSet>
</CustomField>