force-app/main/default/objects/BOM__c/fields/SAPId__c.field-meta.xml
<CustomField>
    <fullName>SAPId__c</fullName>
    <label>SAP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>