force-app/main/default/objects/BOM__c/fields/SortNumber__c.field-meta.xml
<CustomField>
    <fullName>SortNumber__c</fullName>
    <formula>/*CASE( Type__c, 
 		&apos;Látka&apos;, 1, 
 		&apos;Látka sezení&apos;, 2, 
 		&apos;Látka polštáře&apos;, 3, 
 		&apos;Počet modulů&apos;, 4, 
 		&apos;Prosklený strop&apos;, 5, 
 		&apos;Rám&apos;, 6, 
 		&apos;Madlo&apos;, 7,
 		&apos;Panty&apos;, 8,
 		&apos;Výška stolu&apos;, 9,
 		&apos;Zásuvka&apos;, 10,
 		&apos;Vybavení&apos;, 11,
 		&apos;Doprava&apos;, 12,
 		&apos;Montáž&apos;, 13,
 		&apos;Balení&apos;, 14,
 		15)
*/
1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>