force-app/main/default/objects/BOM__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <formula>IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;1&quot;),&quot;SPRINKLER&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;2&quot;),&quot;Madlo&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;3&quot;),&quot;Panty&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;4&quot;),&quot;Dveřní těsnění&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;5&quot;),&quot;Zasklívací těsnění&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;6&quot;),&quot;Stolek PRIME&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;7&quot;),&quot;Zdrojový kabel&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;8&quot;),&quot;Zásuvka v panelu - PRIME,UNIQ&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;9&quot;),&quot;Zásuvkový panel 4-modulový volně stojící / na stolku&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;10&quot;),&quot;Čalounění&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;11&quot;),&quot;Výroba&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;12&quot;),&quot;SOFT&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;13&quot;),&quot;AMBIENT&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;14&quot;),&quot;PULSE&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;15&quot;),&quot;Umístění stolku UNIQ&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;16&quot;),&quot;16&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;17&quot;),&quot;17&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;18&quot;),&quot;18&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;19&quot;),&quot;Rám - PRIME&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;20&quot;),&quot;Rám - UNIQ&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;21&quot;),&quot;Rám - CUBIQ&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;22&quot;),&quot;Rám - QI&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;23&quot;),&quot;Rám - QUADRIO&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;24&quot;),&quot;Strop QUADRIO&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;25&quot;),&quot;Umístění stolku PRIME&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;26&quot;),&quot;Zásuvka v panelu - CUBIQ,QI&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;27&quot;),&quot;Zásuvka v panelu QII-QIV&quot; + BR(),NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;28&quot;),&quot;Látka na akustické závěsy&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;29&quot;),&quot;Zásuvka v panelu - SPARK, UNIQ&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;30&quot;),&quot;30&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;31&quot;),&quot;Rám - SPARK&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;32&quot;),&quot;32&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;33&quot;),&quot;Externí opláštění - SPARK&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;34&quot;),&quot;Externí opláštění - SPARK²&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;35&quot;),&quot;Externí opláštění - SPARK⁴&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;36&quot;),&quot;Rám SPARK²/ ⁴&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;37&quot;),&quot;Zásuvka pod stolem / na zemi - SPARK²&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;38&quot;),&quot;Zásuvka ve stolku - SPARK⁴&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;39&quot;),&quot;Zásuvka na zemi- SPARK⁴&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;40&quot;),&quot;Látka interiérových obkladů&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;41&quot;),&quot;Zásuvka ve stolku - SPARK²&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;42&quot;),&quot;Látka sezení SPARK&quot;,NULL)+
IF(INCLUDES(BundleItemId__r.Specification__c ,&quot;43&quot;),&quot;Příplatek Extra&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specification</label>
    <type>Text</type>
</CustomField>