force-app/main/default/objects/BOM__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <description>Sales Price of bundle Item.</description>
    <inlineHelpText>Sales Price of bundle Item.</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>