force-app/main/default/objects/BOM__c/validationRules/IsEditableCheckedCheckIsVisible.validationRule-meta.xml
<ValidationRule>
    <fullName>IsEditableCheckedCheckIsVisible</fullName>
    <active>true</active>
    <errorConditionFormula>AND( IsEditable__c == true,  IsVisible__c == false)</errorConditionFormula>
    <errorDisplayField>IsVisible__c</errorDisplayField>
    <errorMessage>Checkbox Editable was checked so you must check field Visible.</errorMessage>
</ValidationRule>