force-app/main/default/objects/BOM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>BundleId__c</columns>
    <columns>BundleSAPId__c</columns>
    <columns>NAME</columns>
    <columns>IsVisible__c</columns>
    <columns>IsEditable__c</columns>
    <columns>IsTemplateProduct__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Specification__c</field>
        <operation>equals</operation>
        <value>CENÍK</value>
    </filters>
    <label>All</label>
</ListView>